* gui: display 32x32 avatars on buddy list instead of 31x31 (beevvy)
* parser: #2612 fixed: restored DATA_PATH, HOME, KADU_CONFIG Parser variables (beevvy)
* gadu: #2620 fixed: restored downloading big avatars (beevvy)
* build: migrated to GNUInstallDirs CMake module which should fix installation paths on Debian multiarch (beevvy)

+++ version 0.12.0
* gui: better preview in configuration window (Vogel)

+++ version 0.12.0-rc1
* network: #2523 fixed: try to connect from time to time even if system tells us we are offline (Vogel)
* tabs: #2118 fixed: add open recent chats button to tabswindow (kelmain)
* sms: #2538 fixed: removed unsupported multibox gateway (Vogel)
* gui: #2588 fixed: in status menu check action of desired status not active one (ultr)

+++ version 0.12.0-beta2
* core: #2403 fixed: start conference with preferred contacts of each buddy instead of first ones (ultr)
* core: #2434 done: account password is now forgotten after offline status is set and 'Remember password' option is disabled (Juzef)
* chat styles: #1866 fixed: use small version of avatars in chat window (Vogel)
* emoticons: #2475 fixed: accept non-latin characters in emoticons (Vogel)
* gui: #1948 fixed: sometimes size of infopanel was lost from configuration (Vogel)
* core: #2436 fixed: do not ask for password for accounts with no passwords after saving configuration (Vogel)
* gui: #2556 fixed: don't clear filter field's focus when its text is erased (ultr)
* gui: #2507 fixed: link folding option is respected before restarting kadu (marseel)
* jabber: #2476 fixed: transfer of files between Kadu and Pidgin works now (Vogel)
* freedesktop_notify: #2356 fixed: forgot about notifications only when server asks for it (Vogel)
* gui: #2555 fixed: identities should use common status icons when needed (ultr)
* chat styles: #2565 fixed: no css style in chat window with one message after updating settings (marseel)
* history: #2550 fixed: ask user for removing history (marseel)